# GALERA

./: LICENSE.md  README.md  backend.py  db_requests.py  models.py  requirements.txt  sygnal_mne.py  sygnals_mne.py  tempCodeRunnerFile.py
Brainaccess/: main.py
brainaccess/connect/: processor.py
brainaccess/core/: __init__.py  annotation.py  ble_device.py  charging_settings.py  device_features.py  device_info.py  device_model.py  eeg_channel.py  eeg_manager.py  impedance_measurement_mode.py  version.py
brainaccess/lib/: babciconnect.lib
brainmain/: backend.py  config.py  galerabrainlib.py  main.py  stream.py
frontend/: .env.example  .gitignore  tailwind.config.ts
frontend/src/ai/: dev.ts
hotb_starter_code/: README.md  VERYconcentratedtest.fif  conura.fif  data_in.py  device_name_lookup.py  example.ipynb  gemini.py  main.py  matrix.fif  pochodnia.py  readfif.py  sygnal_mne.py  test.py  test_focus.py  test_last.py  uncondura.fif  unmatrix.fif  xd.fif
hotb_starter_code/BrainAccessSDK-linux/: third party license notes.rtf
hotb_starter_code/BrainAccessSDK-linux/python_api/: hatch_build.py  pyproject.toml
hotb_starter_code/BrainAccessSDK-linux/python_api/brainaccess/: __init__.py
hotb_starter_code/BrainAccessSDK-linux/python_api/brainaccess/core/: full_battery_info.py  gain_mode.py  sBacore_config_t.py  stream_rate.py
hotb_starter_code/BrainAccessSDK-linux/python_api/brainaccess/examples/: example_eeg_acquisition_to_mne.py  example_impedance_measurement.py  example_minimal_eeg_acquisition.py
hotb_starter_code/BrainAccessSDK-linux/python_api/brainaccess/lib/: libbacore.so.3.6.1
hotb_starter_code/BrainAccessSDK-linux/python_api/brainaccess/utils/: exceptions.py
hotb_starter_code/BrainAccessSDK-windows/: LICENSE.md
hotb_starter_code/csvfiles/: control_raw.csv  control_raw_annotations.csv  tiktok.csv
(+58 files in other folders)
