[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brainaccess"
version = "3.6.1"
description = "BrainAccess Python API"
readme = {content-type = "text/markdown",file = "README.md"}
requires-python = ">=3.8"
keywords = ["brainaccess", "BCI", "EEG", "neuroscience"]
authors = [
  { name = "neurotechnology", email = "brainaccess@neurotechnology.com" },
]
classifiers = [
  "License :: Other/Proprietary License",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Healthcare Industry",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "pandas",
  "matplotlib",
  "numpy",
  "pyyaml",
  "multimethod",
  "mne",
]

[tool.hatch.build.targets.wheel]
include = [
  "/brainaccess",
]
force-include = { "brainaccess/lib" = "brainaccess/lib" }

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"
dependencies = []

[tool.mypy]
ignore_missing_imports = true

[tool.pycodestyle]
max_line_length = 100
ignore = 402

[project.urls]
homepage = "https://www.brainaccess.ai/"
documentation = "https://www.brainaccess.ai/software/brainaccess-sdk/"
